[package]
name = "tars"
version = "0.1.1"
edition = "2021"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
rust-version = "1.65.0"
description = "Tar decompression utility for personal use"
repository = "https://github.com/volf52/tars"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
pico-args = "0.5.0"
tar = "0.4.38"
